# Box3D-Roblox-Experiment

./: .gitignore  .gitmodules  README.md  default.project.json  flake.nix  rokit.toml
PLANS/: API-EXPANSION.md  RESTRUCTURE.md
scripts/: build-luau.sh  build-wasm.sh  generate-api-bindings.py  generate-api-coverage.py
src/: Box3D.luau
src/client/: init.client.luau
src/server/: init.server.luau
src/shared/: Box3DAdapter.luau
src/shared/Box3D/: Body.luau  Collision.luau  Core.luau  Events.luau  Joint.luau  Math.luau  Query.luau  Shape.luau  Types.luau  World.luau  init.luau
src/shared/Box3D/Internal/: Adapter.luau  Omitted.luau  Scratch.luau
wasm/: CMakeLists.txt  box3d_api.json  box3d_bridge.c
